--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,7 @@
-.App {
-  text-align: center;
+.App-main {
+  height: 100vh;
+  width: 100vw;
+  background: rgb(19,5,164);
+  background: linear-gradient(0deg, rgba(19,5,164,1) 6%, rgba(14,45,228,1) 22%, rgba(15,83,244,1) 45%, rgba(10,117,233,0.9990371148459384) 60%, rgba(47,181,235,1) 78%, rgba(237,244,243,1) 93%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
